fixed nav bar layout on mobile and fixed missing spaces on license statement

--- a/css/style.css
+++ b/css/style.css
@@ -81,9 +81,9 @@ body {
 }
 .panel {
 	width: max(45vw, 800px);
+	height: 100svh;
 	display: flex;
 	flex-direction: column;
-	height: 100svh;
 	padding: 10px 20px;
 	background-color: #fff;
 	box-shadow: inset 0 0 0 2px #000, inset 0 0 0 4px #fff, inset 0 0 0 6px #000;
@@ -346,6 +346,8 @@ footer {
 	font-size: 0.8em;
 }
 .footer-info p {
+	display: flex;
+	flex-wrap: wrap;
 	margin-bottom: 0;
 	margin-top: auto;
 }
@@ -430,5 +432,11 @@ audio {
 	}
 	.gallery {
 		grid-template-columns: repeat(2, 1fr);
+	}
+	.nav-bar {
+		gap: 0.75em;
+	}
+	.nav__btn {
+		font-size: 1.25em;
 	}
 }
